# gn-dashboard

./: home.py  main.py  pyproject.toml
auth/: login.py
config/: settings.py
database/: database.py  database_core.py
models/: countries.py  users.py
reports/: annual_revenue_per_customer.py
repository/: country_repository.py  customer_repository.py  user_repository.py
services/: annual_revenue_service.py  authentication.py  country_services.py  customer_service.py  sales_boards_service.py  user_service.py
utils/: comparison_table_data.py  conversions.py  generics.py  local_menus.py
