[project]
name = "dashboard"
version = "0.1.0"
authors = [{ name = "José Roberto Ferreira" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyodbc>=5.2.0", "sqlalchemy>=2.0.41", "streamlit>=1.45.1"]

[dependency-groups]
dev = ["sqlacodegen>=3.0.0"]

[tool.ruff]
line-length = 120
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
